--- a/assets/style.css
+++ b/assets/style.css
@@ -118,18 +118,15 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
-.intro {
-    text-align: center;
-}
 .intro p {
     margin: 0px auto;
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .steps div {
@@ -154,19 +151,17 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #fce138
 }
 .secondary-border {
     border-color: #39a6b2
-}
-.trainers {
-    text-align: center;
 }
 .trainer {
     width: 900px;
@@ -204,7 +199,6 @@ section {
     text-align: right;
 }
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -235,4 +229,6 @@ section {
 .contact-info a {
     color: #fce138;
 }
-
+.flex-row {
+    display: flex;
+}
