--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0px 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -65,6 +65,7 @@ section {
 }
 .hero {
     display: flex;
+    align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
     background-image: url("../assets/images/hero-bg.jpg");
@@ -77,7 +78,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style: italic;
@@ -170,7 +171,7 @@ section {
     color: #024e76;
 }
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -277,3 +278,13 @@ section {
 .flex-row {
     display: flex;
 }
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    }
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+    }
